--- a/src/styles/infopanel.css
+++ b/src/styles/infopanel.css
@@ -40,12 +40,13 @@
 .meta-info {
    position: absolute;
    bottom: 0.5em;
-   right: 3.5em;
+   right: 1em;
    font-style: italic;
    color: gray;
    background: white;
    padding: 0.2em;
    border-radius: 3px;
+   font-size: 12px;
 }
 
 label {
@@ -78,4 +79,24 @@ h1 {
     margin-bottom: 0.5em;
     margin-top: 0;
     font-size: 2em;
+}
+
+.settings-button {
+    width: 50px;
+    height: 50px;
+    background: white;
+    color: black;
+    padding: 0;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    opacity: 50%;
+}
+
+.settings-button:hover {
+    background: #b1b1b1;
+    color: white;
+    opacity: 100%;
 }
