--- a/src/styles/sidepanel.css
+++ b/src/styles/sidepanel.css
@@ -7,23 +7,8 @@
     font-style: italic;
 }
 
-.info-panel {
-    padding: 0.5em;
-    height: 100%;
-    overflow-y: scroll;
-    overflow: auto;
-}
-
 .side-panel {
     overflow: hidden;
-}
-
-.equipment-tag {
-    background: #a5a8a5;
-    border-radius: 3px;
-    padding: 0.2em;
-    font-family: "Lucida console";
-    font-size: 0.95rem;
 }
 
 .tag-container {
@@ -31,10 +16,14 @@
     flex-direction: row;
     gap: 0.5em;
     flex-wrap: wrap;
+}
 
-    /* hacky fix to not cover the absolute positioned
-       meta tag at the bottom */
-    margin-bottom: 3em;
+.tag {
+    background: #b0b0b0;
+    border-radius: 3px;
+    padding: 0.2em;
+    font-family: "Lucida console";
+    font-size: 0.95rem;
 }
 
 .meta-info {
@@ -62,7 +51,7 @@ label {
     white-space: nowrap;
 }
 
-p {
+.data-section--text {
     padding: 0.5em;
     padding-top: 0.5em;
     width: 100%;
@@ -79,6 +68,7 @@ h1 {
     margin-bottom: 0.5em;
     margin-top: 0;
     font-size: 2em;
+    text-transform: uppercase;
 }
 
 .settings-button {
