--- a/src/styles/sidepanel.css
+++ b/src/styles/sidepanel.css
@@ -11,6 +11,13 @@
     overflow: hidden;
 }
 
+.info-panel {
+    padding: 0.5em;
+    height: 100%;
+    overflow-y: scroll;
+    overflow: auto;
+}
+
 .tag-container {
     display: flex;
     flex-direction: row;
