--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,55 +1,85 @@
 .modal-frame {
-    background-color: white;
-    border-radius: 10px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    filter: drop-shadow(10px 10px 5px #9f9f9f);
-    opacity: 100%;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  filter: drop-shadow(5px 5px 3px #9f9f9f);
+  opacity: 100%;
 }
 
 .modal-frame:focus {
-    outline: none;
+  outline: none;
 }
 
 .modal-overlay {
-    position: absolute;
-    display: grid;
-    place-items: center;
-    
-    /* necessary to raise above the leaflet layers */
-    z-index: 2000;
-    
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+  position: absolute;
+  display: grid;
+  place-items: center;
+  
+  /* necessary to raise above the leaflet layers */
+  z-index: 2000;
+  
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .modal-overlay-pane {
-    width: 100%;
-    height: 100%;
-    opacity: 50%;
-    background: black;
+  width: 100%;
+  height: 100%;
+  opacity: 50%;
+  background: black;
 }
 
 .modal-content {
-    background: white;
-    border-radius: 10px;
-    width: 500px;
-    height: 500px;
+  background-color: white;
+  border-radius: 10px;
+  width: 700px;
+  height: 500px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
 }
 
 .close-button {
-    position: absolute;
-    top: -1px;
-    right: -1px;
-    border: none;
-    border-radius: 0 7px 0 0;
-    padding: 10px 15px;
-    background: #cfcfcf;
-    cursor: pointer;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  border: none;
+  border-radius: 0 7px 0 0;
+  padding: 10px 15px;
+  background: #cfcfcf;
+  cursor: pointer;
 }
 
 .close-button:hover {
-    background: red;
+  background: red;
+}
+.vanish {  
+  width: 0.1px;
+  height: 0.1px;
+  position: absolute;
+  top:0;
+  left: 0;   
+}
+
+.file-input-button {
+  padding: 0.5em;
+  background: #bbb;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.file-input-button:hover {
+  background-color: black;
+  color: white;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
